# python-sdk

./: README.md  pyproject.toml  reference.md
.github/workflows/: publish.yml
tests/: test_prefix_routing.py
voltaria/: __init__.py  _wrapper.py
voltaria/_generated/: README.md  __init__.py  _default_clients.py  client.py  environment.py  reference.md
voltaria/_generated/accounts/: __init__.py  client.py  raw_client.py
voltaria/_generated/clients/: __init__.py  client.py  raw_client.py
voltaria/_generated/collections/: __init__.py  client.py  raw_client.py
voltaria/_generated/core/: client_wrapper.py
voltaria/_generated/documents/: client.py  raw_client.py
voltaria/_generated/drawdowns/: __init__.py  client.py  raw_client.py
voltaria/_generated/errors/: __init__.py
voltaria/_generated/installments/: __init__.py  client.py  raw_client.py
voltaria/_generated/investors/: client.py  raw_client.py
voltaria/_generated/loans/: __init__.py  client.py  raw_client.py
voltaria/_generated/partners/: client.py  raw_client.py
voltaria/_generated/recoveries/: __init__.py  client.py  raw_client.py
voltaria/_generated/repayments/: __init__.py  client.py  raw_client.py
voltaria/_generated/sandbox/: __init__.py  client.py  raw_client.py
voltaria/_generated/tests/: test_aiohttp_autodetect.py
voltaria/_generated/types/: __init__.py  account_address.py  account_holder_type_enum.py  account_status_enum.py  available_document_categories_response.py  available_funding.py  bulk_loan_item_payload.py  bulk_loan_item_payload_amount.py  bulk_loan_item_result.py  (+88 more)
(+22 files in other folders)
