# Hand-written packaging manifest (Fern does not generate one). Listed in
# .fernignore so regeneration never clobbers it. `version` is stamped by the
# API repo's deployment pipeline at release time.
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "voltaria-sdk"
version = "2.34.6"
description = "Official Python SDK for the Voltaria API"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.21",
    "pydantic>=1.9",
    "typing_extensions>=4.0",
]

[project.urls]
Repository = "https://github.com/voltariafinance/python-sdk"

[tool.hatch.build.targets.wheel]
# Ship the whole `voltaria` package — hand-written entry/wrapper plus the
# generated code under voltaria/_generated/.
packages = ["voltaria"]
